# cruxpy

./: .gitignore  README.md  __main__.py  main.py  portspage.py  pyproject.toml  repo.py
.github/workflows/: commit.yaml  publish.yaml  release.yaml
cruxpy/: portspage.py  repo.py
cruxpy/examples/: cli.py  make_ports_page.py
cruxpy/files/: black.css  header.html  original.css
examples/: cli.py  make_ports_page.py  print_page.py  write_page_and_style.py
portspage/: __main__.py
tests/: README.md  local_page.py  simple.py  test_port.py  test_repo.py
