[project]
name = "cruxpy"
description = "Help build page for Crux ports repository"
license = "GPL-3.0-only"
version = "0.0.3"
dependencies = [
  "GitPython"
]
requires-python= ">=3.10"
authors = [
  { name = "Wawrzyniec Niewodniczański", email = "main@wawrzek.name" },
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
py_modules = ["portspage", "repo"]

[tool.setuptools.package-data]
"portspage"= ["files/*"]
